# PineGuard

./: .coveragerc  .dockerignore  .env.local  .eslintrc.json  .gitignore  .pylintrc  Dockerfile  LICENSE  README.md  docker-compose.yml  environment.d.ts  jest.config.js  jest.setup.js  netlify.toml  next.config.js  package-lock.json  package.json  pineguard.service  pyproject.toml  pytest.ini  requirements.txt  run_fire_history.py  run_predictive_models.py  setup.py  setup_droplet.sh  setup_ubuntu.sh  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  types.d.ts
.do/: app.yaml
.next/: app-build-manifest.json  trace
api/: fire_risk.py  main.py  requirements.txt
app/: api-test.tsx  config.py  firefighter_bill.py  globals.css  layout.tsx  logger.py  main.py  map_layers.py  page.tsx  prediction.py  risk_category.py  ui_elements.py  utils.py
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
coverage/: clover.xml  coverage-final.json  lcov.info
k8s/: deployment.yaml  ingress.yaml  monitoring.yaml
tests/: conftest.py  test_api.py  test_base_model.py  test_config.py  test_data_loader.py  test_data_loader_additional.py  test_ensemble_model.py  test_ensemble_wildfire_model_extras.py  test_fire_risk.py  test_firefighter_bill.py  test_firefighter_bill_extended.py  test_firefighter_bill_module.py  test_fuel_analyzer.py  test_integration.py  test_logger.py  test_main_endpoints.py  test_map_data.py  test_map_layers.py  test_prediction.py  test_report_generator.py  test_report_generator_extras.py  test_risk_category.py  test_satellite_analyzer.py  (+3 more)
(+630 files in other folders)
